...
        val sessions by viewModel.sessions
        val groupMembers by viewModel.members
        val groupRequests by viewModel.requests

        Scaffold(
            modifier = Modifier.semantics {
                contentDescription = "JoinedGroupDetailsView"
            },
            topBar = {
                TopBar(
                    title = group?.name ?: "",
                    subtitle = group?.lecture?.lectureName ?: "",
                    navClick = { viewModel.navBack() },
...
                                Icons.Rounded.Flag,
                                contentDescription = "Knopf um die Gruppe oder Session zu melden."
                            )
                        }
                        if (viewModel.isAdmin.value) {
                            IconButton(onClick = { viewModel.editGroup() },
                            modifier = Modifier.semantics {contentDescription = "Knopf um die Gruppe zu editieren" }) {
                                Icon(
                                    Icons.Rounded.Edit,
                                    contentDescription = "Knopf um die Gruppe zu editieren."
                                )
                            }
                        }
...
