...
            },
            title = {
                Column {
                    Text(
                        title.take(26), fontSize = MaterialTheme.typography.titleLarge.fontSize, fontWeight = FontWeight.SemiBold,
                        modifier = Modifier.semantics {
                            contentDescription = "TopBarTitle"
                        })
                    if (subtitle != null) {
                        Text(subtitle,
                            modifier = Modifier.semantics {
                                contentDescription = "TopBarSubTitle"
                            },
...
